<resources>
    <string name="app_name">天气预报</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title">标题:</string>
    <string name="concern">关注:</string>

    <string name="yesterday">昨日天气:</string>
    <string name="today">今日天气:</string>
    <string name="forecast1">明日天气</string>
    <string name="forecast2">未来两日天气</string>
    <string name="forecast3">未来三日天气</string>
    <string name="forecast4">未来四日天气</string>
    <string name="cancel_concern">取消关注</string>
</resources>
